--- a/less/addcourse.less
+++ b/less/addcourse.less
@@ -15,7 +15,7 @@
 }
 
 .form_container {
-    margin-top: 10px;
+    margin-top: @5px * 2;
     width: 80vw;
     border-radius: 10px;
     height: 80vh;
